USE DATABASE TCH;
USE SCHEMA PUBLIC;

-- Tables d'exécution technique
CREATE TABLE IF NOT EXISTS T_SUIV_RUN (
    RUN_ID INTEGER PRIMARY KEY,
    RUN_STRT_DTTM TIMESTAMP NOT NULL,
    RUN_END_DTTM TIMESTAMP,
    RUN_STTS_CD VARCHAR(10) NOT NULL
);

CREATE TABLE IF NOT EXISTS T_SUIV_TRMT (
    EXEC_ID INTEGER PRIMARY KEY,
    RUN_ID INTEGER NOT NULL REFERENCES T_SUIV_RUN(RUN_ID),
    SCRPT_NAME VARCHAR(250) NOT NULL,
    EXEC_STRT_DTTM TIMESTAMP NOT NULL,
    EXEC_END_DTTM TIMESTAMP,
    EXEC_STTS_CD VARCHAR(10) NOT NULL
);